Updated content css for force letter spacing for admin links. Updated display method ImageContainer content type to look for displayColumns rather than columns attribute to avoid clashing with spContent columns attribute (we only want columns when displaying the actual images, not the container itself). Fixed nasty, and silly, bug in code to close up open table in spHandler, always used mod operator to determine the number of columns remaining, but if number of rows wasn't divisible by number of columns, remainder was always the number of columns, ouch!

--- a/www/stylesheets/system/content.css
+++ b/www/stylesheets/system/content.css
@@ -46,6 +46,7 @@ a.spAdminLink {
 	font:10px Verdana, Arial, Helvetica, sans-serif;
 	color:#0000FF;
 	text-decoration:underline;
+	letter-spacing: normal;
 }
 a.spAdminLink:hover {
 	font:10px Verdana, Arial, Helvetica, sans-serif;
